@@ -22,6 +22,7 @@
 	require_once "include/config.inc.php";
 	require_once "include/screens.inc.php";
 	require_once "include/forms.inc.php";
+	require_once "include/nodes.inc.php";
 
 	$page["title"] = "S_CONFIGURATION_OF_SCREENS";
 	$page["file"] = "screenedit.php";
